--- a/contact.html
+++ b/contact.html
@@ -13,48 +13,7 @@
 
   <style>
     @import url('https://fonts.ggoleapis.com/css?family=Poppins:400,500,600,700,800&display=swap');
-    *{
-      margin: 0;
-      padding: 0;
-      font-family: 'Poppins', sans-serif;
-    }
-    body{
-      display: flex;
-      justify-content: center;
-      min-height: 100vh;
-      background-color: rgb(10,25,47);
-    }
-    .container .row100 .inputBox input{
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background: transparent;
-      box-shadow: none;
-      border: none;
-      outline: none;
-      font-size: 18px;
-      padding: 0 10px;
-      z-index: 1;
-      color: white;
-    }
-    .container .row100 .inputBox text{
-      position: absolute;
-      top: 0;
-      left: 0;
-      line-height: 40px;
-      font-size: 18px;
-      padding: 0 10px;
-      display: block;
-      transition: 0.5s;
-      pointer-events: none;
-    }
-    .container .row100 .inputBox input:focus + .text
-    .container .row100 .inputBox input:valid + .text
-    {
-      top: -35px;
-      left: -10px;
-      
-    }
+
     .bd-placeholder-img {
       font-size: 1.125rem;
       text-anchor: middle;
@@ -117,7 +76,7 @@
     <div class="container2 w-100 p-20px">
       <nav class="navbar navbar-expand-sm navbar-Default bg-Default" aria-label="Third navbar example">
         <div class="container-fluid d-flex justify-content-space-between border-bottom">
-          <a class="navbar-brand" href="index.html"><img src="codepro.svg" alt="logo" style="width: 150px;"></a>
+          <a class="navbar-brand" href="index.html"><img src="./images/codepro.svg" alt="logo" style="width: 150px;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
             aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -146,54 +105,34 @@
 
     <!-- navigation end -->
 
-    <!-- contact -->
-    <div class="container">
-      <h2 style=" width: 100%; color: rgb(95,241,208); font-size: 36px; text-align: center; margin-bottom: 10px;">Contact Us</h2>
-      <div class="row100" style="position: relative; display: grid; grid-template-columns: repeat(autofit,minmax(300px, 1fr));">
-        <div class="col" style="position: relative; width: 100%; padding: 0 10px; margin: 30px 0 10px; transition: 0.5s">
-          <div class="inputBox" style="position: relative; width: 100%; height: 40%; color: rgb(95,241,208);">
-            <input type="text" name="" required="required">
-            <span class="text">First Name</span>
-            <span class="line"></span>
+    <div class="text-center">
+
+      <main class="form-signin">
+        <form>
+          <img class="mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+          <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+
+          <div class="form-floating">
+            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">Email address</label>
           </div>
-        </div>
-        <div class="col" style="position: relative; width: 100%; padding: 0 10px; margin: 30px 0 10px; transition: 0.5s">
-          <div class="inputBox" style="position: relative; width: 100%; height: 40%; color: rgb(95,241,208);">
-            <input type="text" name="" required="required">
-            <span class="text">Last Name</span>
-            <span class="line"></span>
+          <div class="form-floating">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <label for="floatingPassword">Password</label>
           </div>
-        </div>
-        <div class="row100" style="position: relative; display: grid; grid-template-columns: repeat(autofit,minmax(300px, 1fr));">
-          <div class="col" style="position: relative; width: 100%; padding: 0 10px; margin: 30px 0 10px; transition: 0.5s">
-            <div class="inputBox" style="position: relative; width: 100%; height: 40%; color: rgb(95,241,208);">
-              <input type="text" name="" required="required">
-              <span class="text">Email</span>
-              <span class="line"></span>
-            </div>
+
+          <div class="checkbox mb-3">
+            <label>
+              <input type="checkbox" value="remember-me"> Remember me
+            </label>
           </div>
-          <div class="col" style="position: relative; width: 100%; padding: 0 10px; margin: 30px 0 10px; transition: 0.5s">
-            <div class="inputBox" style="position: relative; width: 100%; height: 40%; color: rgb(95,241,208);">
-              <input type="text" name="" required="required">
-              <span class="text">Mobile</span>
-              <span class="line"></span>
-            </div>
-          </div>
-          <div class="row100" style="position: relative; display: grid; grid-template-columns: repeat(autofit,minmax(300px, 1fr));">
-            <div class="col" style="position: relative; width: 100%; padding: 0 10px; margin: 30px 0 10px; transition: 0.5s">
-              <div class="inputBox textarea" style="position: relative; width: 100%; height: 40%; color: rgb(95,241,208);">
-                <textarea required="required"></textarea>
-                <span class="text">Type your message here...</span>
-                <span class="line"></span>
-              </div>
-            </div>
-        </div>
-        <div class="row100" style="position: relative; display: grid; grid-template-columns: repeat(autofit,minmax(300px, 1fr));">
-          <div class="col" style="position: relative; width: 100%; padding: 0 10px; margin: 30px 0 10px; transition: 0.5s">
-            <input type="submit" value="Send">
-          </div>
-        </div>
-      </div>
+          <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+          <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+        </form>
+      </main>
+
+
+
     </div>
 
     <!-- contact end -->
