Updated link for navs change style for button

--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
       <div class="container col-xl-10 col-xxl-8 px-4 py-5">
         <div class="row align-items-center g-lg-5 py-2">
           <div class="col-lg-7 text-center text-lg-start">
-            <h1 class="display-4 fw-normal lh-1 mb-3"  style="color: rgb(95,241,208); font-size: 2rem;">I AM HERE FOR YOU <br><span style="font-size: 4rem; font-weight: bolder;color: rgb(202,212,244);">CONTACT ME</span></h1>
+            <h1 class="display-4 fw-normal lh-1 mb-3"  style="color: rgb(95,241,208); font-size: 2rem; ">I AM HERE FOR YOU <br><span style="font-size: 4rem; font-weight: bolder;color: rgb(202,212,244);">CONTACT ME</span></h1>
             <p class="col-lg-10 fs-3 fw-bold" style="color: rgb(95,241,208);">Code<span style="color: rgb(202,212,244);">Pro</span> Page design Tips</p>
             <ul class="col-lg-10 fs-5 fw-normal" style="color: rgb(202,212,244);">
               <li>Ensure it's easy to access</li>
@@ -116,26 +116,48 @@
               <li>Offer multiple contact options</li>
               <li>Don't ask for too much information</li>
             </ul>
+            <div>
+              <ul class="nav col-md-7 list-unstyled">
+                <li class="ms-3"><a href="https://www.facebook.com/jaiyanz22" ><i class="fa-brands fa-facebook fa-2x" style="color: rgb(95,241,208);"></i></a></li>
+                <li class="ms-3"><a href="https://www.linkedin.com/in/jaime-yanoc-4b715116b/" ><i class="fa-brands fa-linkedin fa-2x" style="color: rgb(95,241,208);"></i></a></li>
+                <li class="ms-3"><a href="https://discord.com/channels/@me" ><i class="fa-brands fa-discord fa-2x" style="color: rgb(95,241,208);"></i></a></li>
+                <li class="ms-3"><a href="https://github.com/FapaGaming" ><i class="fa-brands fa-github fa-2x" style="color: rgb(95,241,208);"></i></a></li>
+                <li class="ms-3"><a href="https://www.twitch.tv/fapa_gaming"><i class="fa-brands fa-twitch fa-2x"
+                  style="color: rgb(95,241,208);"></i></a></li>
+              </ul>
+              <br>
+             
+              <dl class="mt-7" style="color: rgb(202,212,244);" >
+                <dt>WhatsApp</dt>
+                <dd>  +63 960 899 8117</dd>
+                <dt>Mobile</dt>
+                <dd>  +63 991 488 1798</dd>
+                <dt>Skype</dt>
+                <dd>  live:.cid.dd9dc27cf0409808</dd>
+                <dt>Email</dt>
+                <dd>  jaiyanz22@gmail.com</dd>
+              </dl>   
+            </div>
           </div>
           <div class="col-md-10 mx-auto col-lg-5">
             <form class="p-4 p-md-5 border rounded-3" style="color: rgb(202,212,244);">
-              <img class="mb-4" src="./images/codepro.svg" alt="" height="70">
+              <img class="mb-4" src="./images/codepro.svg" alt="" height="60">
               <h1 class="h4 mb-3 fw-bold">Contact Me Directly</h1>
               <div class="form-floating mb-3">
                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">First Name</label>
+                <label for="floatingInput" style="color: rgb(10,25,47);">Name</label>
               </div>
               <div class="form-floating mb-3">
                 <input type="email" class="form-control" id="floatingPassword" placeholder="name@example.com">
-                <label for="floatingPassword">Email address</label>
+                <label for="floatingPassword" style="color: rgb(10,25,47);">Email address</label>
               </div>
               <div class="form-floating mb-3">
                 <input type="number" class="form-control" id="floatingInput" placeholder="0960XXXXXXX">
-                <label for="floatingInput">Mobile</label>
+                <label for="floatingInput" style="color: rgb(10,25,47);">Mobile</label>
               </div>
               <div class="form-floating mb-3">
-                <textarea class="form-control" id="comment" name="text" placeholder="Comment goes here"></textarea>
-                <label for="comment">Write a message</label>
+                <textarea class="form-control" id="comment" name="text" placeholder="Comment goes here" style="height: 150px;"></textarea>
+                <label for="comment" style="color: rgb(10,25,47);">Write a message</label>
               </div>
               <button class="w-100 btn btn-lg btn-transfarent"
                 style="border: solid 1px rgb(202,212,244); color: rgb(95,241,208);" type="submit">Message Send</button>
