Change type value form email to text

--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
             <ul class="col-lg-10 fs-5 fw-normal" style="color: rgb(202,212,244);">
               <li>Ensure it's easy to access</li>
               <li>Make it unique</li>
-              <li>Inclde the right information</li>
+              <li>Include the right information</li>
               <li>Offer multiple contact options</li>
               <li>Don't ask for too much information</li>
             </ul>
@@ -144,7 +144,7 @@
               <img class="mb-4" src="./images/codepro.svg" alt="" height="60">
               <h1 class="h4 mb-3 fw-bold">Contact Me Directly</h1>
               <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput" style="color: rgb(10,25,47);">Name</label>
               </div>
               <div class="form-floating mb-3">
