fix bug and putting id for a unique

--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
 
       <!-- Three columns of text below the carousel -->
      <div class="container px-4 py-5">
-    <h2 class="pb-2 border-bottom" style="color: rgb(95,241,208);" id="skills-offer">SKILLS THAT I OFFER</h2>
+    <h2 class="pb-2 border-bottom" id="skills-offer">SKILLS THAT I OFFER</h2>
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
       <div class="col d-flex flex-column align-items-start gap-2">
-        <h3 class="fw-bold" style="color: rgb(202,212,244);">Web Developer + Web Designer <br><span style="font-size: 4rem;" id="f-p">FULL PACKAGE</h3>
+        <h3 class="fw-bold" id="wwdd">Web Developer + Web Designer <br><span style="font-size: 4rem;" id="f-p">FULL PACKAGE</h3>
         <p class="text-muted"><ul class="col-lg-10 fs-5 fw-normal" style="color: rgb(202,212,244);">
           <li>Ensure it's easy to access</li>
           <li>Make it unique</li>
@@ -217,7 +217,7 @@
             <div>
              <img style="height: 100px;" src="./images/ga-1.svg" alt="">
             </div>
-            <h4 class="fw-semibold mb-0" style="color: rgb(95,241,208);">Graphics Design</h4>
+            <h4 class="fw-semibold mb-0"  id="icon-1">Graphics Design</h4>
             <p style="color: rgb(202,212,244);">I can produce innovative and original designs that capture the audience's attention</p>
           </div>
 
@@ -225,7 +225,7 @@
             <div>
              <img style="height: 100px;" src="./images/cp-3.svg" alt="">
             </div>
-            <h4 class="fw-semibold mb-0" style="color: rgb(95,241,208);">Web Development</h4>
+            <h4 class="fw-semibold mb-0" id="icon-1">Web Development</h4>
             <p style="color: rgb(202,212,244);">I ensure that the website performs reliably and efficiently. My primary role is to guarantee the website is visually appealing and easy to navigate</p>
           </div>
 
@@ -233,7 +233,7 @@
             <div>
              <img style="height: 100px;" src="./images/ui-ux.svg" alt="">
             </div>
-            <h4 class="fw-semibold mb-0" style="color: rgb(95,241,208);">UI + UX Design</h4>
+            <h4 class="fw-semibold mb-0" id="icon-1">UI + UX Design</h4>
             <p style="color: rgb(202,212,244);">I create all the visual and interactive elements of a product interface, covering everything from typography and color palettes.</p>
           </div>
 
@@ -241,7 +241,7 @@
             <div>
              <img style="height: 100px;" src="./images/ve-2.svg" alt="">
             </div>
-            <h4 class="fw-semibold mb-0" style="color: rgb(95,241,208);">Video Editing</h4>
+            <h4 class="fw-semibold mb-0" id="icon-1">Video Editing</h4>
             <p style="color: rgb(202,212,244);">I know a basic video editing using filmora, It covers importing footage, to editing basics, transitions, working with audio, and exporting</p>
           </div>
         </div>
@@ -256,7 +256,7 @@
 
       <div class="row featurette mt-5 ">
         <div class="col-md-7">
-          <h2 class="ff1">Featured Web Frontend Project.
+          <h2 class="ff1" id="project">Featured Web Frontend Project.
             <br><span style="color: rgb(202,212,244);" class="gm1">Dark Theme</span>
           </h2>
           <p class="lead" id="fp1">A minimal, dark blue theme for VS Code, Sublime Text, Atom, iTerm, and more.
@@ -274,7 +274,7 @@
 
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-          <h2 class="ff1">Featured Photoshop Project. <br>
+          <h2 class="ff1" id="project">Featured Photoshop Project. <br>
             <span style="color: rgb(202,212,244);" class="gm1">Photo Editor</span>
           </h2>
           <p class="lead" id="fp1">A lot of Photoshop skills that you will end up using as a graphic designer are
@@ -297,10 +297,10 @@
 
       <div class="row featurette mt-5">
         <div class="col-md-7">
-          <h2 class="ff1">Featured Charge Entry Project.
+          <h2 class="ff1" id="project">Featured Charge Entry Project.
             <br><span style="color: rgb(202,212,244);" class="gm1">Medical Auditor</span>
           </h2>
-          <p class="lead" id="fp1"> reviews medical records and other documentation to identify under and over
+          <p class="lead" id="fp1"> Reviews medical records and other documentation to identify under and over
             coded
             services, prepares reports of findings and meets with management to educate on and improve coding
             practices.
