change color toggle bar

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a class="navbar-brand" href="#hero1"><img src="./images/codepro.svg" alt="logo" style="width: 150px;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
             aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"><i class="fa-solid fa-bars fa-2x" style="color: rgb(95,241,208);"></i></span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarsExample03">
@@ -40,9 +40,6 @@
               </li>
               <li class="nav-item" id="l1">
                 <a class="nav-link active" href="#custom-cards" id="aa">Portfolio</a>
-              </li>
-              <li class="nav-item" id="l1">
-                <a class="nav-link active" href="#myCarousel" id="aa">Gallery</a>
               </li>
               <li class="nav-item" id="l1">
                 <a class="nav-link active" href="contact.html" id="aa">Contact</a>
@@ -67,7 +64,7 @@
         <div class="col-lg-6">
 
           <h1 class="display-5 fw-light lh-1 mb-2" id="hero1">FRONTEND + BACKEND <br><span
-              style="font-size: 4rem; font-weight: bolder; color: rgb(202,212,244);"> WEB DEVELOPER</span></h1>
+              style="font-size: 4rem; font-weight: bolder;" id="devep"> WEB DEVELOPER</span></h1>
           <p class="lead" style="color: rgb(202,212,244);">I am a freelance web developer who loves to brings
             ideas to
             life with web technologies.
@@ -91,7 +88,7 @@
     <!--about me-->
     <div class="text-secondary px-4 py-5 text-center" style="background-image: url(./images/1fig.gif); background-size: cover;">
       <div class="py-5">
-        <h1 class="display-5 fw-bold" style="color: rgb(95,241,208); font-size: 2rem;" id="me1">ABOUT ME</h1>
+        <h1 class="display-5 fw-bold" id="me1">ABOUT ME</h1>
         <div class="col-lg-6 mx-auto">
           <p class="fs-6 mb-3" style="color: rgb(202,212,244);">Hello! My name is Jaime, a graphics artist, and I
             enjoy
