change file name to .PNG to .png

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             challenging things like clipping paths and masks in Photoshop.</p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img src="./images/code1.PNG" class="img-thumbnail text-shadow-5 img-fluid mx-auto" width="500" height="500"
+          <img src="./images/code1.png" class="img-thumbnail text-shadow-5 img-fluid mx-auto" width="500" height="500"
             src="code1.PNG" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
             focusable="false">
           <title>Placeholder</title>
