Alignment in hero section and navbar change from container to container-fluid

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div class="container-liquid">
     <!--navigation-->
-    <div class="container">
+    <div class="container-fluid">
       <nav class="navbar navbar-expand-sm navbar-default text-bg-default" aria-label="Third navbar example">
         <div class="container-fluid d-flex justify-content-space-between border-bottom">
           <a class="navbar-brand" href="#hero1"><img src="./images/codepro.svg" alt="logo" style="width: 150px;"></a>
@@ -58,13 +58,8 @@
     <div class="container-fluid col-xxl-8 px-4 py-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
-<<<<<<< HEAD
           <img src="./images/cover1.svg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
             height="700" loading="lazy">
-=======
-          <img src="#" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
-            height="500" loading="lazy">
->>>>>>> 3831283e3b59b237094dda146d783b5755adc205
         </div>
         <div class="col-lg-6">
 
@@ -397,13 +392,13 @@
 
         <!-- footer end -->
       </div>
-<<<<<<< HEAD
+
       <!-- Latest compiled JavaScript -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
-=======
+
     </div>
   </div>
 
@@ -507,4 +502,4 @@
 
 </html>
  
->>>>>>> 3831283e3b59b237094dda146d783b5755adc205
+
