fix  the footer to be responsive

--- a/index.html
+++ b/index.html
@@ -330,46 +330,21 @@
 
         <!-- footer -->
 
-        <div class="container">
-          <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <div class="container-fluid">
-              <table class="col-12">
-                <tr class="col-12"><th style="text-align: center; font-size: 1rem;"><a href="contact.html" style="color: rgb(95,241,208); text-decoration: none;">CONTACT ME DIRECTLY:</a></th></tr>
-                <tr style="display: flex; justify-content: center; text-align: center; padding-top: 10px;">
-                  <td class="col-3">
-                    <dt style="color: rgb(202,212,244);">WhatsApp</dt>
-                    <dd style="color: rgb(95,241,208);"> +63 960 899 8117</dd>
-                  </td>
-                  <td class="col-3">
-                    <dt style="color: rgb(202,212,244);">Mobile</dt>
-                    <dd style="color: rgb(95,241,208);"> +63 991 488 1798</dd>
-                  </td>
-                  <td class="col-3">
-                    <dt style="color: rgb(202,212,244);">Skype</dt>
-                    <dd style="color: rgb(95,241,208);"> live:.cid.dd9dc27cf0409808</dd>
-                  </td>
-                  <td class="col-3">
-                    <dt style="color: rgb(202,212,244);">Email</dt>
-                    <dd style="color: rgb(95,241,208);"> jaiyanz22@gmail.com</dd>
-                  </td>
-                </tr>
-
-              </table>
+        <div class="container-fluid border-top">
+          <a href="contact.html" style="color: rgb(95,241,208); text-decoration: none; font-weight: bolder;"><center class="pt-2">CONTACT ME DIRECTLY CLICK HERE</center></a>
+            <div class="row row-cols-1 row-cols-md-3 text-center pt-2">
+              <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">WhatsApp</code> <br> +63 960 899 8117</div>
+              <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">Skype</code> <br> live:.cid.dd9dc27cf0409808</div>
+              <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">Email</code> <br> jaiyanz22@gmail.com</div>
             </div>
+
+          <footer class="d-flex flex-wrap justify-content-between align-items-center">
             <div class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
               <div class="col-md-4 d-flex align-items-center">
                 <a href="#navbarsExample03" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                   <img src="./images/codepro.svg" alt="logo" style="width: 150px;">
                 </a>
               </div>
-              <div>
-                <table>
-                  <tr>
-
-                  </tr>
-                </table>
-              </div>
-
               <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                 <li class="ms-3"><a href="https://www.facebook.com/jaiyanz22"><i class="fa-brands fa-facebook"
                       style="color: rgb(95,241,208);"></i></a></li>
@@ -387,18 +362,13 @@
             </div>
           </footer>
 
+
+
+          <!-- footer end -->
         </div>
 
-
-        <!-- footer end -->
-      </div>
-
-      <!-- Latest compiled JavaScript -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Latest compiled JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
-
-
- 
-
