Link my resume in the button from hero section and about me section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </p>
           <div>
             <a href="contact.html"><button id="button77" type="button"><span id="span11"></span>Hire Me</button></a>
-            <button id="button77" type="button"><span id="span11"></span>Resume</button>
+            <a href="https://drive.google.com/file/d/1piDcaHngccJ5J7GpeLCVD_P-JXXQiyH6/view?usp=sharing" target="_blank"><button id="button77" type="button"><span id="span11"></span>Resume</button></a>
           </div>
         </div>
         <div id="mySidenav" class="sidenav">
@@ -113,7 +113,7 @@
             for a
             developer to add to your team, I'd love to hear from you!</p><br>
 
-          <div><button id="button77" type="button"><span id="span11"></span>Hire Me</button></div>
+            <a href="https://drive.google.com/file/d/1piDcaHngccJ5J7GpeLCVD_P-JXXQiyH6/view?usp=sharing" target="_blank"><button id="button77" type="button"><span id="span11"></span>Resume</button></a>
 
         </div>
       </div>
