link change my link in resume index and contact section

--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html" id="aa">Home</a>
               </li>
               <li class="nav-item" id="l1">
-                <a class="nav-link active" id="aa">Resume</a>
+                <a class="nav-link active"  href="https://drive.google.com/file/d/1tLeKYxIxe-5PG0C7D5t6CJdedz9PRqjf/view?usp=share_link" target="_blank" id="aa">Resume</a>
               </li>
             </ul>
           </div>
