--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </p>
           <div>
             <a href="contact.html"><button id="button77" type="button"><span id="span11"></span>Hire Me</button></a>
-            <a href="https://drive.google.com/file/d/1piDcaHngccJ5J7GpeLCVD_P-JXXQiyH6/view?usp=sharing" target="_blank"><button id="button77" type="button"><span id="span11"></span>Resume</button></a>
+            <a href="https://drive.google.com/file/d/1tLeKYxIxe-5PG0C7D5t6CJdedz9PRqjf/view?usp=share_link" target="_blank"><button id="button77" type="button"><span id="span11"></span>Resume</button></a>
           </div>
         </div>
         <div id="mySidenav" class="sidenav">
@@ -113,7 +113,7 @@
             for a
             developer to add to your team, I'd love to hear from you!</p><br>
 
-            <a href="https://drive.google.com/file/d/1piDcaHngccJ5J7GpeLCVD_P-JXXQiyH6/view?usp=sharing" target="_blank"><button id="button77" type="button"><span id="span11"></span>Resume</button></a>
+            <a href="https://drive.google.com/file/d/1tLeKYxIxe-5PG0C7D5t6CJdedz9PRqjf/view?usp=share_link" target="_blank"><button id="button77" type="button"><span id="span11"></span>Resume</button></a>
 
         </div>
       </div>
@@ -335,7 +335,7 @@
             <div class="row row-cols-1 row-cols-md-3 text-center pt-2">
               <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">WhatsApp</code> <br> +63 960 899 8117</div>
               <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">Skype</code> <br> live:.cid.dd9dc27cf0409808</div>
-              <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">Email</code> <br> jaiyanz22@gmail.com</div>
+              <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">Email</code> <br> <a href="mailto:asdf@gmail.com">jaiyanz22@gmail.com</a></div>
             </div>
 
           <footer class="d-flex flex-wrap justify-content-between align-items-center">
