Styling for anchor tag from txt-decoration none

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <div class="row row-cols-1 row-cols-md-3 text-center pt-2">
               <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">WhatsApp</code> <br> +63 960 899 8117</div>
               <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">Skype</code> <br> live:.cid.dd9dc27cf0409808</div>
-              <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">Email</code> <br> <a href="mailto:asdf@gmail.com">jaiyanz22@gmail.com</a></div>
+              <div class="col themed-grid-col" style="color: rgb(95,241,208);"><code style="color: rgb(202,212,244);">Email</code> <br> <a href="mailto:asdf@gmail.com"  style="color: rgb(95,241,208); text-decoration: none;">jaiyanz22@gmail.com</a></div>
             </div>
 
           <footer class="d-flex flex-wrap justify-content-between align-items-center">
